--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,10 @@
-#body {
+body {
   background: #ffffff;}
 
 #main article {
 	background-color: rgba(255,255,255, 1.0);
 } 
 
+body, input, select, textarea {
+  color: #000000;
+}
