--- a/css/project.css
+++ b/css/project.css
@@ -1,10 +1,21 @@
 body {
   background: #ffffff;}
+  
+body, input, select, textarea {
+  color: #000000;
+}
+  
+body, input, select, textarea {
+  color: #000000;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #000000;
+}
 
 #main article {
 	background-color: rgba(255,255,255, 1.0);
 } 
 
-body, input, select, textarea {
-  color: #000000;
-}
+
+
