update content bg

--- a/css/project.css
+++ b/css/project.css
@@ -37,3 +37,10 @@ h2 {
 select option {
   background: #ffffff;
   color: #000000; }
+  
+.image {
+	background-color: rgba(255, 255, 255, 1.0);
+}  
+
+body.is-loading #bg:before {
+    background-color: #ffffff; }
