--- a/css/project.css
+++ b/css/project.css
@@ -17,10 +17,6 @@ strong, b {
   color: #000000;
 }
 
-#main article {
-	background-color: rgba(220,220,220, 0.7);
-} 
-
 
 h1 {
 	letter-spacing: 0.2rem; }
@@ -28,4 +24,402 @@ h1 {
 h2 {
 	letter-spacing: 0.2rem; }
 	
+
+#header {
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -moz-align-items: center;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+  -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+  -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+  transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
+  background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.25) 25%, transparent 55%);
+  background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.25) 25%, transparent 55%);
+  background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.25) 25%, transparent 55%);
+  background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, transparent 55%);
+  max-width: 100%;
+  text-align: center; }
+  #header > * {
+    -moz-transition: opacity 0.325s ease-in-out;
+    -webkit-transition: opacity 0.325s ease-in-out;
+    -ms-transition: opacity 0.325s ease-in-out;
+    transition: opacity 0.325s ease-in-out;
+    position: relative;
+    margin-top: 3.5rem; }
+    #header > *:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: calc(-3.5rem - 1px);
+      left: calc(50% - 1px);
+      width: 1px;
+      height: calc(3.5rem + 1px);
+      background: #000000; }
+  #header > :first-child {
+    margin-top: 0; }
+    #header > :first-child:before {
+      display: none; }
+  #header .logo {
+    width: 5.5rem;
+    height: 5.5rem;
+    line-height: 5.5rem;
+    border: solid 1px #000000;
+    border-radius: 100%; }
+    #header .logo .icon:before {
+      font-size: 2rem; }
+  #header .content {
+    border-style: solid;
+    border-color: #000000;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    max-width: 100%; }
+    #header .content .inner {
+      -moz-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+      -webkit-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+      -ms-transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+      transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;
+      -moz-transition-delay: 0.25s;
+      -webkit-transition-delay: 0.25s;
+      -ms-transition-delay: 0.25s;
+      transition-delay: 0.25s;
+      padding: 3rem 2rem;
+      max-height: 40rem;
+      overflow: hidden; }
+      #header .content .inner > :last-child {
+        margin-bottom: 0; }
+    #header .content p {
+      text-transform: uppercase;
+      letter-spacing: 0.2rem;
+      font-size: 0.8rem;
+      line-height: 2; }
+  #header nav ul {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    margin-bottom: 0;
+    list-style: none;
+    padding-left: 0;
+    border: solid 1px #000000;
+    border-radius: 4px; }
+    #header nav ul li {
+      padding-left: 0;
+      border-left: solid 1px #000000; }
+      #header nav ul li:first-child {
+        border-left: 0; }
+      #header nav ul li a {
+        display: block;
+        min-width: 7.5rem;
+        height: 2.75rem;
+        line-height: 2.75rem;
+        padding: 0 1.25rem 0 1.45rem;
+        text-transform: uppercase;
+        letter-spacing: 0.2rem;
+        font-size: 0.8rem;
+        border-bottom: 0; }
+        #header nav ul li a:hover {
+          background-color: rgba(255, 255, 255, 0.075); }
+        #header nav ul li a:active {
+          background-color: rgba(255, 255, 255, 0.175); }
+  #header nav.use-middle:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: calc(50% - 1px);
+    width: 1px;
+    height: 100%;
+    background: #ffffff; }
+  #header nav.use-middle ul li.is-middle {
+    border-left: 0; }
+  body.is-article-visible #header {
+    -moz-transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);
+    -moz-filter: blur(0.1rem);
+    -webkit-filter: blur(0.1rem);
+    -ms-filter: blur(0.1rem);
+    filter: blur(0.1rem);
+    opacity: 0; }
+  body.is-loading #header {
+    -moz-filter: blur(0.125rem);
+    -webkit-filter: blur(0.125rem);
+    -ms-filter: blur(0.125rem);
+    filter: blur(0.125rem); }
+    body.is-loading #header > * {
+      opacity: 0; }
+    body.is-loading #header .content .inner {
+      max-height: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+      opacity: 0; }
+  @media screen and (max-width: 980px) {
+    #header .content p br {
+      display: none; } }
+  @media screen and (max-width: 736px) {
+    #header > * {
+      margin-top: 2rem; }
+      #header > *:before {
+        top: calc(-2rem - 1px);
+        height: calc(2rem + 1px); }
+    #header .logo {
+      width: 4.75rem;
+      height: 4.75rem;
+      line-height: 4.75rem; }
+      #header .logo .icon:before {
+        font-size: 1.75rem; }
+    #header .content .inner {
+      padding: 2.5rem 1rem; }
+    #header .content p {
+      line-height: 1.875; } }
+  @media screen and (max-width: 480px) {
+    #header {
+      padding: 1.5rem 0; }
+      #header .content .inner {
+        padding: 2.5rem 0; }
+      #header nav ul {
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        min-width: 10rem;
+        max-width: 100%; }
+        #header nav ul li {
+          border-left: 0;
+          border-top: solid 1px #ffffff; }
+          #header nav ul li:first-child {
+            border-top: 0; }
+          #header nav ul li a {
+            height: 3rem;
+            line-height: 3rem;
+            min-width: 0;
+            width: 100%; }
+      #header nav.use-middle:after {
+        display: none; } }
+
+
+#main {
+  -moz-flex-grow: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
+  -moz-flex-shrink: 1;
+  -webkit-flex-shrink: 1;
+  -ms-flex-shrink: 1;
+  flex-shrink: 1;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-align-items: center;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -moz-justify-content: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+  max-width: 100%;
+  z-index: 3; }
+  #main article {
+    -moz-transform: translateY(0.25rem);
+    -webkit-transform: translateY(0.25rem);
+    -ms-transform: translateY(0.25rem);
+    transform: translateY(0.25rem);
+    -moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
+    -webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
+    -ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
+    transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
+    padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
+    position: relative;
+    width: 40rem;
+    max-width: 100%;
+    background-color: rgba(255,255,255, 0.175);
+    border-radius: 4px;
+    opacity: 0; }
+    #main article.active {
+      -moz-transform: translateY(0);
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0);
+      opacity: 1; }
+    #main article .close {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 4rem;
+      height: 4rem;
+      cursor: pointer;
+      text-indent: 4rem;
+      overflow: hidden;
+      white-space: nowrap; }
+      #main article .close:before {
+      	background-color: rgba(0, 0, 0, 1.0);
+        -moz-transition: background-color 0.2s ease-in-out;
+        -webkit-transition: background-color 0.2s ease-in-out;
+        -ms-transition: background-color 0.2s ease-in-out;
+        transition: background-color 0.2s ease-in-out;
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0.75rem;
+        left: 0.75rem;
+        width: 2.0rem;
+        height: 2.0rem;
+        border-radius: 100%;
+        background-position: center;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='20px' height='20px' viewBox='0 0 20 20' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffffff%3B stroke-width: 1%3B %7D%3C/style%3E%3Cline x1='2' y1='2' x2='18' y2='18' /%3E%3Cline x1='18' y1='2' x2='2' y2='18' /%3E%3C/svg%3E");
+        background-size: 17px 17px;
+        background-repeat: no-repeat; }
+      #main article .close:hover:before {
+        background-color: rgba(0, 0, 0, 1.0); }
+      #main article .close:active:before {
+        background-color: rgba(0, 0, 0, 1.0); }
+  @media screen and (max-width: 736px) {
+    #main article {
+      padding: 3.5rem 2rem 0.5rem 2rem ; }
+      #main article .close:before {
+        top: 0.875rem;
+        left: 0.875rem;
+        width: 2.25rem;
+        height: 2.25rem;
+        background-size: 14px 14px; } }
+  @media screen and (max-width: 480px) {
+    #main article {
+      padding: 3rem 1.5rem 0.5rem 1.5rem ; } }
+
+
+
+/* BG */
+#bg {
+  -moz-transform: scale(1.0);
+  -webkit-transform: scale(1.0);
+  -ms-transform: scale(1.0);
+  transform: scale(1.0);
+  -webkit-backface-visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1; }
+  #bg:before, #bg:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+  #bg:before {
+    -moz-transition: background-color 2.5s ease-in-out;
+    -webkit-transition: background-color 2.5s ease-in-out;
+    -ms-transition: background-color 2.5s ease-in-out;
+    transition: background-color 2.5s ease-in-out;
+    -moz-transition-delay: 0.75s;
+    -webkit-transition-delay: 0.75s;
+    -ms-transition-delay: 0.75s;
+    transition-delay: 0.75s;
+	background-image: linear-gradient(to top, rgba(255, 255, 255, 1.0), rgba(255, 255, 255, 1.0)), url("/images/overlay.png");
+    background-size: auto, 256px 256px;
+    background-position: center, center;
+    background-repeat: no-repeat, repeat;
+    z-index: 2; }
+  #bg:after {
+    -moz-transform: scale(1.125);
+    -webkit-transform: scale(1.125);
+    -ms-transform: scale(1.125);
+    transform: scale(1.125);
+    -moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
+    -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
+    -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
+    transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
+    background-image: url("/images/bg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: repeat;
+    z-index: 1; }
+  body.is-article-visible #bg:after {
+    -moz-transform: scale(1.0825);
+    -webkit-transform: scale(1.0825);
+    -ms-transform: scale(1.0825);
+    transform: scale(1.0825);
+    -moz-filter: blur(0.2rem);
+    -webkit-filter: blur(0.2rem);
+    -ms-filter: blur(0.2rem);
+    filter: blur(0.2rem); }
+  body.is-loading #bg:before {
+    background-color: #ffffff; }
+
+/* Image */
+.image {
+  border-radius: 4px;
+  border: 0;
+  display: inline-block;
+  position: relative; }
+  .image:before {
+    -moz-pointer-events: none;
+    -webkit-pointer-events: none;
+    -ms-pointer-events: none;
+    pointer-events: none;
+    background-image: url("/images/overlay.png");
+    background-color: rgba(19, 21, 25, 0.01);
+    border-radius: 1px;
+    content: '';
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0.0;
+    position: absolute;
+    top: 0;
+    width: 100%; }
+  .image img {
+    border-radius: 4px;
+    display: block; }
+  .image.left, .image.right {
+    max-width: 40%; }
+    .image.left img, .image.right img {
+      width: 100%; }
+  .image.left {
+    float: left;
+    padding: 0 1.5em 1em 0;
+    top: 0.25em; }
+  .image.right {
+    float: right;
+    padding: 0 0 1em 1.5em;
+    top: 0.25em; }
+  .image.fit {
+    display: block;
+    margin: 0 0 2rem 0;
+    width: 100%; }
+    .image.fit img {
+      width: 100%; }
+  .image.main {
+    display: block;
+    margin: 2.5rem 0;
+    width: 100%; }
+    .image.main img {
+      width: 100%; }
+  @media screen and (max-width: 736px) {
+    .image.main {
+      margin: 2rem 0; } }
+  @media screen and (max-width: 480px) {
+    .image.main {
+      margin: 1.5rem 0; } }
 
