--- a/css/main.css
+++ b/css/main.css
@@ -455,14 +455,14 @@ input[type="radio"] + label:before {
     -webkit-pointer-events: none;
     -ms-pointer-events: none;
     pointer-events: none;
-    background-image: url("/images/overlay.png");
-    background-color: rgba(19, 21, 25, 0.5);
-    border-radius: 4px;
+    background-image: none;
+    background-color: rgba(255, 255, 255, 1.0);
+    border-radius: 0px;
     content: '';
     display: block;
     height: 100%;
     left: 0;
-    opacity: 0.5;
+    opacity: 1.0;
     position: absolute;
     top: 0;
     width: 100%; }
@@ -541,9 +541,9 @@ ul {
         text-align: center;
         width: 2.25rem; }
         ul.icons li a:hover {
-          background-color: rgba(255, 255, 255, 0.075); }
+          background-color: rgba(255, 255, 255, 1.0); }
         ul.icons li a:active {
-          background-color: rgba(255, 255, 255, 0.175); }
+          background-color: rgba(255, 255, 255, 1.0); }
   ul.actions {
     cursor: default;
     list-style: none;
@@ -771,7 +771,7 @@ button {
     -webkit-transition-delay: 0.75s;
     -ms-transition-delay: 0.75s;
     transition-delay: 0.75s;
-    background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("/images/overlay.png");
+    background-image: none;
     background-size: auto, 256px 256px;
     background-position: center, center;
     background-repeat: no-repeat, repeat;
@@ -785,7 +785,7 @@ button {
     -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
     -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
     transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-    background-image: url("/images/bg.jpg");
+    background-image: none;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
