--- a/css/project.css
+++ b/css/project.css
@@ -336,7 +336,7 @@ h2 {
     -webkit-transition-delay: 0.75s;
     -ms-transition-delay: 0.75s;
     transition-delay: 0.75s;
-	background-image: linear-gradient(to top, rgba(255, 255, 255, 1.0), rgba(255, 255, 255, 1.0)), url("/images/overlay.png");
+	background-image: none;
     background-size: auto, 256px 256px;
     background-position: center, center;
     background-repeat: no-repeat, repeat;
@@ -350,7 +350,7 @@ h2 {
     -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
     -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
     transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-    background-image: url("/images/bg.jpg");
+    background-image: none;
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
@@ -378,8 +378,8 @@ h2 {
     -webkit-pointer-events: none;
     -ms-pointer-events: none;
     pointer-events: none;
-    background-image: url("/images/overlay.png");
-    background-color: rgba(19, 21, 25, 0.01);
+    background-image: none;
+    background-color: rgba(255, 255, 255, 1.0);
     border-radius: 1px;
     content: '';
     display: block;
